tests/unit-tests/docs/deployment/cognito/test_data/expected/istio-system_networking.istio.io_v1alpha3_envoyfilter_tcp-metadata-exchange-1.9.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  labels:
    istio.io/rev: default
  name: tcp-metadata-exchange-1.9
  namespace: istio-system
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: SIDECAR_INBOUND
      listener: {}
      proxy:
        proxyVersion: ^1\.9.*
    patch:
      operation: INSERT_BEFORE
      value:
        name: istio.metadata_exchange
        typed_config:
          '@type': type.googleapis.com/udpa.type.v1.TypedStruct
          type_url: type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
          value:
            protocol: istio-peer-exchange
  - applyTo: CLUSTER
    match:
      cluster: {}
      context: SIDECAR_OUTBOUND
      proxy:
        proxyVersion: ^1\.9.*
    patch:
      operation: MERGE
      value:
        filters:
        - name: istio.metadata_exchange
          typed_config:
            '@type': type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
            value:
              protocol: istio-peer-exchange
  - applyTo: CLUSTER
    match:
      cluster: {}
      context: GATEWAY
      proxy:
        proxyVersion: ^1\.9.*
    patch:
      operation: MERGE
      value:
        filters:
        - name: istio.metadata_exchange
          typed_config:
            '@type': type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: type.googleapis.com/envoy.tcp.metadataexchange.config.MetadataExchange
            value:
              protocol: istio-peer-exchange
